modules/lib/dependencies/openh264/cobalt_h264_shim.h

/**
 * Feeds one compressed access unit to the decoder and reconstructs it.
 *
 * The wrapper zeroes the handle's reusable C-side SBufferInfo and its three-entry
 * plane-pointer array, then drives the decoder vtable DecodeFrameNoDelay slot
 * with the supplied bytes; openh264 parses and reconstructs a complete frame
 * immediately. A decoded picture became available only when DecodeFrameNoDelay
 * succeeded AND the SBufferInfo iBufferStatus is 1; that picture is retrieved
 * afterwards with cobalt_h264_decoder_get_frame. When iBufferStatus is 0 the
 * input was consumed but produced no displayable frame yet, which the get-frame
 * call reports as no picture ready.
 *
 * @param ctx  the decoder handle from cobalt_h264_decoder_create.
 * @param data the compressed access-unit bytes, including Annex-B start codes.
 * @param len  the length of data in bytes.
 * @return COBALT_H264_OK on success (including when no frame is ready),
 *         COBALT_H264_BAD_PARAM for a NULL ctx or buffer,
 *         COBALT_H264_NATIVE_ERROR if DecodeFrameNoDelay reports a decode error.
 */
int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len);
/**
 * Retrieves the picture decoded by the most recent cobalt_h264_decoder_decode
 * call.
 *
 * The wrapper checks the handle's SBufferInfo iBufferStatus: when a picture is
 * ready it returns the handle itself through outImg as the opaque picture handle
 * (its planes and dimensions are read with cobalt_h264_img_plane /
 * cobalt_h264_img_stride / cobalt_h264_img_width / cobalt_h264_img_height),
 * otherwise it leaves outImg holding NULL. The returned picture is decoder-owned
 * and valid only until the next cobalt_h264_decoder_decode call on this handle.
 *
 * @param ctx    the decoder handle from cobalt_h264_decoder_create.
 * @param outImg receives the decoded picture handle, or NULL when none is ready;
 *               must not be NULL.
 * @return COBALT_H264_OK on success (including when no picture is ready),
 *         COBALT_H264_BAD_PARAM for a NULL argument.
 */
int32_t cobalt_h264_decoder_get_frame(void *ctx, void **outImg);
/**
 * Returns a plane data pointer of a decoded picture.
 *
 * Reads the SBufferInfo pDst[plane] of the opaque picture handle. Plane 0 is luma
 * (Y), plane 1 is the U (Cb) chroma plane, plane 2 is the V (Cr) chroma plane.
 * The pointer addresses decoder-owned memory valid until the next
 * cobalt_h264_decoder_decode call; rows carry stride padding, so reads must honor
 * cobalt_h264_img_stride.
 *
 * @param img   the picture handle from cobalt_h264_decoder_get_frame.
 * @param plane the plane index, 0, 1 or 2.
 * @return the plane base pointer, or NULL for a NULL handle or out-of-range plane.
 */
const uint8_t *cobalt_h264_img_plane(void *img, int32_t plane);
/**
 * Returns the row stride, in bytes, of a decoded picture plane.
 *
 * Reads the SBufferInfo UsrData.sSystemBuffer iStride of the opaque picture
 * handle: iStride[0] for the luma plane (plane index 0) and iStride[1] for either
 * chroma plane (plane index 1 or 2), as openh264 stores a single shared chroma
 * stride. The stride is a plain int, so no widening is needed.
 *
 * @param img   the picture handle from cobalt_h264_decoder_get_frame.
 * @param plane the plane index, 0 for luma or 1/2 for chroma.
 * @return the plane stride in bytes, or 0 for a NULL handle or out-of-range plane.
 */
int32_t cobalt_h264_img_stride(void *img, int32_t plane);
/**
 * Returns the displayed width, in pixels, of a decoded picture.
 *
 * Reads the SBufferInfo UsrData.sSystemBuffer iWidth of the opaque picture
 * handle.
 *
 * @param img the picture handle from cobalt_h264_decoder_get_frame.
 * @return the picture width in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_h264_img_width(void *img);
/**
 * Returns the displayed height, in pixels, of a decoded picture.
 *
 * Reads the SBufferInfo UsrData.sSystemBuffer iHeight of the opaque picture
 * handle.
 *
 * @param img the picture handle from cobalt_h264_decoder_get_frame.
 * @return the picture height in pixels, or 0 for a NULL handle.
 */
int32_t cobalt_h264_img_height(void *img);
/**
 * Uninitializes and destroys a decoder created by cobalt_h264_decoder_create and
 * frees its handle.
 *
 * The wrapper drives the decoder vtable Uninitialize slot, calls
 * WelsDestroyDecoder on the C++ object, and frees the handle. Must be called at
 * most once per handle. A NULL handle is ignored and reported as success.
 *
 * @param ctx the decoder handle, or NULL.
 * @return COBALT_H264_OK on success.
 */
int32_t cobalt_h264_decoder_destroy(void *ctx);