modules/lib/src/main/java/com/github/auties00/cobalt/calls/media/video/codec/h264/bindings/CobaltOpenH264.java


        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static FunctionDescriptor cobalt_h264_decoder_decode$descriptor() {
        return cobalt_h264_decoder_decode.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MethodHandle cobalt_h264_decoder_decode$handle() {
        return cobalt_h264_decoder_decode.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static MemorySegment cobalt_h264_decoder_decode$address() {
        return cobalt_h264_decoder_decode.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_decode(void *ctx, const uint8_t *data, size_t len)
     * }
     */
    public static int cobalt_h264_decoder_decode(MemorySegment ctx, MemorySegment data, long len) {
        var mh$ = cobalt_h264_decoder_decode.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_decoder_decode", ctx, data, len);
            }
            return (int)mh$.invokeExact(ctx, data, len);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_decoder_get_frame {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_decoder_get_frame");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static FunctionDescriptor cobalt_h264_decoder_get_frame$descriptor() {
        return cobalt_h264_decoder_get_frame.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static MethodHandle cobalt_h264_decoder_get_frame$handle() {
        return cobalt_h264_decoder_get_frame.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static MemorySegment cobalt_h264_decoder_get_frame$address() {
        return cobalt_h264_decoder_get_frame.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_get_frame(void *ctx, void **outImg)
     * }
     */
    public static int cobalt_h264_decoder_get_frame(MemorySegment ctx, MemorySegment outImg) {
        var mh$ = cobalt_h264_decoder_get_frame.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_decoder_get_frame", ctx, outImg);
            }
            return (int)mh$.invokeExact(ctx, outImg);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_img_plane {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_img_plane");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_h264_img_plane(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_h264_img_plane$descriptor() {
        return cobalt_h264_img_plane.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_h264_img_plane(void *img, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_h264_img_plane$handle() {
        return cobalt_h264_img_plane.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * const uint8_t *cobalt_h264_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_h264_img_plane$address() {
        return cobalt_h264_img_plane.ADDR;
    }

    /**
     * {@snippet lang=c :
     * const uint8_t *cobalt_h264_img_plane(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_h264_img_plane(MemorySegment img, int plane) {
        var mh$ = cobalt_h264_img_plane.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_img_plane", img, plane);
            }
            return (MemorySegment)mh$.invokeExact(img, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_img_stride {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER,
            CobaltOpenH264.C_INT
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_img_stride");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_stride(void *img, int32_t plane)
     * }
     */
    public static FunctionDescriptor cobalt_h264_img_stride$descriptor() {
        return cobalt_h264_img_stride.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_stride(void *img, int32_t plane)
     * }
     */
    public static MethodHandle cobalt_h264_img_stride$handle() {
        return cobalt_h264_img_stride.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_stride(void *img, int32_t plane)
     * }
     */
    public static MemorySegment cobalt_h264_img_stride$address() {
        return cobalt_h264_img_stride.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_stride(void *img, int32_t plane)
     * }
     */
    public static int cobalt_h264_img_stride(MemorySegment img, int plane) {
        var mh$ = cobalt_h264_img_stride.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_img_stride", img, plane);
            }
            return (int)mh$.invokeExact(img, plane);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_img_width {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_img_width");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_width(void *img)
     * }
     */
    public static FunctionDescriptor cobalt_h264_img_width$descriptor() {
        return cobalt_h264_img_width.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_width(void *img)
     * }
     */
    public static MethodHandle cobalt_h264_img_width$handle() {
        return cobalt_h264_img_width.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_width(void *img)
     * }
     */
    public static MemorySegment cobalt_h264_img_width$address() {
        return cobalt_h264_img_width.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_width(void *img)
     * }
     */
    public static int cobalt_h264_img_width(MemorySegment img) {
        var mh$ = cobalt_h264_img_width.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_img_width", img);
            }
            return (int)mh$.invokeExact(img);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_img_height {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_img_height");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_height(void *img)
     * }
     */
    public static FunctionDescriptor cobalt_h264_img_height$descriptor() {
        return cobalt_h264_img_height.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_height(void *img)
     * }
     */
    public static MethodHandle cobalt_h264_img_height$handle() {
        return cobalt_h264_img_height.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_height(void *img)
     * }
     */
    public static MemorySegment cobalt_h264_img_height$address() {
        return cobalt_h264_img_height.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int32_t cobalt_h264_img_height(void *img)
     * }
     */
    public static int cobalt_h264_img_height(MemorySegment img) {
        var mh$ = cobalt_h264_img_height.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("cobalt_h264_img_height", img);
            }
            return (int)mh$.invokeExact(img);
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class cobalt_h264_decoder_destroy {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            CobaltOpenH264.C_INT,
            CobaltOpenH264.C_POINTER
        );

        public static final MemorySegment ADDR = CobaltOpenH264.findOrThrow("cobalt_h264_decoder_destroy");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_destroy(void *ctx)
     * }
     */
    public static FunctionDescriptor cobalt_h264_decoder_destroy$descriptor() {
        return cobalt_h264_decoder_destroy.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_destroy(void *ctx)
     * }
     */
    public static MethodHandle cobalt_h264_decoder_destroy$handle() {
        return cobalt_h264_decoder_destroy.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int32_t cobalt_h264_decoder_destroy(void *ctx)
     * }
     */
    public static MemorySegment cobalt_h264_decoder_destroy$address() {
        return cobalt_h264_decoder_destroy.ADDR;
    }
